Fix deprecated primitive wrapper constructors in other modules